--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'service_log' %}">Service Logs</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'accounts:user_list' %}">Users</a>
+                            </li>
                         {% elif user.user_type == 'Vendor' %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'mas_sheets:mas_create' %}">Create MAS</a>
