--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'accounts:user_list' %}">Users</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'accounts:analytics' %}"><i class="bi bi-graph-up"></i> Analytics</a>
+                            </li>
                         {% elif user.user_type == 'Vendor' %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'mas_sheets:mas_create' %}">Create MAS</a>
